ICE-7045 fix to apply table layout styling only when the pane is not nesting another border layout, in order to avoid gaps in between panes; fixed issue with not being able to collapse a pane if it wasn't configured as closable as well; fix to display right border in center pane; fix to apply style attribute to the root container, since it was being overridden by the underlying widget
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces4@52291 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/trunk/icefaces/ace/component/resources/icefaces.ace/borderlayout/borderlayout.css
+++ b/trunk/icefaces/ace/component/resources/icefaces.ace/borderlayout/borderlayout.css
@@ -15,10 +15,8 @@
  */
 
 .ice-ace-borderlayout {
-	height: 100%;
+	height: 600px;
 	width: 100%;
-	min-height: 600px;
-	min-width: 500px;
 }
 
 .ice-ace-borderlayout .ui-layout-pane-padding {
@@ -37,18 +35,20 @@
 	padding: 5px;
 }
 
-.ice-ace-borderlayout .ui-layout-pane > div {
+.ice-ace-borderlayout .ui-layout-pane-table > div {
 	display: table;
+}
+
+.ice-ace-borderlayout .ui-layout-pane-table > div > div {
+	display: table-row;
+}
+
+.ice-ace-borderlayout .ui-layout-pane > div {
 	height: 100%;
 	width: 100%;
 }
 
-.ice-ace-borderlayout .ui-layout-pane > div > div {
-	display: table-row;
-}
-
 .ice-ace-borderlayout .ui-layout-pane > div > div.ice-ace-boderlayout-content {
-	display: table-row;
 	height: 100%;
 }
 
